tests/idris2/params001/expected
1/1: Building param (param.idr)
1/1: Building parambad (parambad.idr)
Error: While processing right hand side of U. Name Main.X.foo is private.

parambad.idr:7:7--7:10
   |
 7 |   U = foo
   |       ^^^

